Update server monitor view to list all clients connected to the server (WIP)